routing is weird

--- a/auth-server/authorization_code/public/index.html
+++ b/auth-server/authorization_code/public/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="container">
-    <div id="login">
+    <div id="login" style="text-align: center">
       <h1>Login</h1>
       <a href="/login" class="btn btn-primary">Log in with Spotify</a>
     </div>
