--- a/auth-server/authorization_code/public/index.html
+++ b/auth-server/authorization_code/public/index.html
@@ -21,9 +21,14 @@
 
 <body>
   <div class="container">
+    <br>
     <div id="login" style="text-align: center">
-      <h1>Login</h1>
-      <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+      <br>
+      <a href="/login" class="btn btn-success" style="border-radius:25px; font-size:2em;">Log in with Spotify</a>
+    </div>
+    <div id="logout" style="text-align: center">
+      <br>
+      <a href="/logout" class="btn btn-success" style="border-radius:25px; font-size:2em;">Log out</a>
     </div>
     <div id="loggedin">
       <div id="user-profile">
